# vibefixing

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  publish-pypi.yml  publish.yml
action/: README.md  action.yml
action/examples/: vibefixing.yml
examples/: README.md
examples/express-api/: .vibefixing.yml  package.json
examples/nestjs-layered/: .vibefixing.yml  package.json
examples/nextjs-app-router/: .vibefixing.yml  package.json
pypi/: build_bundle.sh  pyproject.toml  sync_version.py
pypi/vibefixing_wrapper/: __main__.py  cli.py
skills/architecture/: clean-architecture.yml  ddd.yml
skills/database/: bigquery.yml  firestore.yml  mongodb.yml  mysql.yml  postgresql.yml  redis.yml
skills/framework/: angular.yml  aspnet.yml  astro.yml  django.yml  express.yml  fastapi.yml  firebase.yml  flask.yml  flutter.yml  laravel.yml  nestjs.yml  nextjs.yml  nuxt.yml  rails.yml  react.yml  remix.yml  spring.yml  supabase.yml  sveltekit.yml  vue.yml
skills/infrastructure/: aws.yml  azure.yml  docker.yml  gcp.yml  github-actions.yml  kubernetes.yml  terraform.yml
skills/language/: csharp.yml  dart.yml  elixir.yml  go.yml  java.yml  javascript.yml  kotlin.yml  php.yml  python.yml  ruby.yml  rust.yml  scala.yml  swift.yml  typescript.yml
skills/security/: owasp-top10.yml  secrets-detection.yml
src/: index.ts
src/commands/: config.ts  doctor.ts  init.ts  scan.ts  skills.ts  upgrade.ts
src/config/: config.ts
src/engine/: scanner.ts  skill-resolver.ts
src/skills/: detector.ts  registry.ts  (+1 more)
(+29 files in other folders)
